# Tweesky

./: .flake8  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: lint-test.yml
src/: config.py  main.py
src/model/: card.py
src/output/html/: html_output.py
src/parser/: html_parser.py  http_parser.py  parser_factory.py  spotify_parser.py
src/tweesky/: config.py  main.py
src/tweesky/output/html/: html_output.py
src/tweesky/output/json/: json_output.py
src/tweesky/parser/: html_parser.py  parser_factory.py  spotify_parser.py
src/tweesky/webdriver/: webdriver_util.py
src/webdriver/: webdriver_util.py
tests/: test_main.py
tests/parser/: test_html_parser.py  test_http_parser.py  test_spotify_parser.py
tests/resources/html/: basic.html  html-with-schema-org-array.html  html-with-twitter-cards-tags.html
tests/tweesky/: test_main.py
tests/tweesky/parser/: test_html_parser.py  test_spotify_parser.py
tests/tweesky/resources/html/: default.html  html-with-schema-org.html
tests/tweesky/webdriver/: webdriver_util_test.py
tweesky/: config.py
tweesky/output/html/: html_output.py
tweesky/output/json/: json_output.py
tweesky/parser/: html_parser.py  parser_factory.py  spotify_parser.py
tweesky/webdriver/: webdriver_util.py
