[metadata]
name = tweesky
version = 0.0.3
url = https://github.com/gcatanese/Tweesky
author=Beppe Catanese
description = Grab OpenGraph and Twitter Cards metadata from URL and HTML documents
keywords = OpenGraph, TwitterCards, Social Media
long_description = file: README.md
long_description_content_type = text/markdown

license_files=LICENSE
license = Apache-2.0

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

install_requires =
    requests==2.26.0
    spotipy==2.19.0
    python-dotenv===0.19.2
    beautifulsoup4===4.10.0
    requests-html===0.10.0
    selenium===4.0.0
    Pillow===9.0.0
