[metadata]
name = tweesky
version = 0.0.4
url = https://github.com/gcatanese/Tweesky
author=Beppe Catanese
description = Grab OpenGraph and Twitter Cards metadata from URL and HTML documents
keywords = OpenGraph, TwitterCards, Social Media
long_description = file: README.md
long_description_content_type = text/markdown

license_files=LICENSE
license = Apache-2.0

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =.
packages=find:

[options.packages.find]
where=.

install_requires =
    requests==2.27.1
    beautifulsoup4===4.10.0
    Pillow===9.0.1
    python-dotenv===0.19.2
    requests-html===0.10.0
    spotipy==2.19.0
