[metadata]
name = tweesky
version = 0.0.5
url = https://github.com/gcatanese/Tweesky
author=Beppe Catanese
description = Grab OpenGraph and Twitter Cards metadata from URLs, HTML documents and Spotify links
keywords = OpenGraph, TwitterCards, Social Media, Spotify
long_description = file: README.md
long_description_content_type = text/markdown

license_files=LICENSE
license = Apache-2.0

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =.
packages=find:

[options.packages.find]
where=.

install_requires =
    requests==2.28.1
    beautifulsoup4===4.11.1
    Pillow===9.4.0
    python-dotenv===0.21.0
    requests-html===0.10.0
    spotipy==2.22.0
